syntax = "proto3";

package polling;

option go_package = "genprotos/";

import "protos/void.proto";


service PollService {
    rpc Create(PollCreateReq) returns (Void);
    rpc Update(PollUpdateReq) returns (Void);
    rpc Delete(ByID) returns (Void);
    rpc GetByID(ByID) returns (PollGetByIDRes);
    rpc GetAll(PollGetAllReq) returns (PollGetAllRes);
}

message PollCreateReq {
    optional string title = 1;
    optional string subtitle = 2;
    repeated Option options = 3;
    repeated Feedback feedbacks = 4; 
}

message Feedback {
    optional int32 from = 1;  
    optional int32 to = 2;
    optional string text = 3;
}

message Option {
    optional string variant = 1;
    optional int32 ball = 2;
}

message PollUpdateReq {
    optional string id = 1;
    optional string title = 2;
    optional string subtitle = 3;
    repeated Option options = 4;
    repeated Feedback feedbacks = 5;

}

message PollUpdateReqSwag {
    optional string title = 1;
    optional string subtitle = 2;
    repeated Option options = 3;
    repeated Feedback feedbacks = 4;

}

message PollGetByIDRes {
    optional string id = 1;
    optional int32 poll_num = 2;
    optional string title = 3;
    optional string subtitle = 4;
    repeated Option options = 5;
    repeated Feedback feedback = 6;
}

message PollGetAllReq {
    optional string user_id = 1;
}

message PollGetAllRes {
    repeated PollGetByIDRes poll = 1;
}